--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div>
                     <strong>Age:</strong>
-                    <p>{{member.city}}, {{member.country}}</p>
+                    <p>{{member.age}}</p>
                 </div>
                 <div>
                     <strong>Last Active:</strong>
