--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -36,7 +36,7 @@
         <thead>
             <tr>
                 <th style="width: 40%">Message</th>
-                <th style="width: 20%">Fronm / To</th>
+                <th style="width: 20%">From / To</th>
                 <th style="width: 20%">Set / Received</th>
                 <th style="width: 20%">Message</th>
             </tr>
